crates/ruff_python_parser/tests/snapshots/invalid_syntax@re_lexing__triple_quoted_fstring_3.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/invalid/re_lexing/triple_quoted_fstring_3.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(
            13,
        ),
        range: 0..262,
        body: [
            If(
                StmtIf {
                    node_index: NodeIndex(
                        12,
                    ),
                    range: 231..262,
                    test: Call(
                        ExprCall {
                            node_index: NodeIndex(
                                10,
                            ),
                            range: 234..253,
                            func: Name(
                                ExprName {
                                    node_index: NodeIndex(
                                        1,
                                    ),
                                    range: 234..238,
                                    id: Name("call"),
                                    ctx: Load,
                                },
                            ),
                            arguments: Arguments {
                                range: 238..253,
                                node_index: NodeIndex(
                                    9,
                                ),
                                args: [
                                    FString(
                                        ExprFString {
                                            node_index: NodeIndex(
                                                8,
                                            ),
                                            range: 239..253,
                                            value: FStringValue {
                                                inner: Single(
                                                    FString(
                                                        FString {
                                                            range: 239..253,
                                                            node_index: NodeIndex(
                                                                7,
                                                            ),
                                                            elements: [
                                                                Interpolation(
                                                                    InterpolatedElement {
                                                                        range: 243..250,
                                                                        node_index: NodeIndex(
                                                                            6,
                                                                        ),
                                                                        expression: Name(
                                                                            ExprName {
                                                                                node_index: NodeIndex(
                                                                                    3,
                                                                                ),
                                                                                range: 244..245,
                                                                                id: Name("x"),
                                                                                ctx: Load,
                                                                            },
                                                                        ),
                                                                        debug_text: None,
                                                                        conversion: None,
                                                                        format_spec: Some(
                                                                            InterpolatedStringFormatSpec {
                                                                                range: 246..250,
                                                                                node_index: NodeIndex(
                                                                                    5,
                                                                                ),
                                                                                elements: [
                                                                                    Literal(
                                                                                        InterpolatedStringLiteralElement {
                                                                                            range: 246..250,
                                                                                            node_index: NodeIndex(
                                                                                                4,
                                                                                            ),
                                                                                            value: ".3f\n",
                                                                                        },
                                                                                    ),
                                                                                ],
                                                                            },
                                                                        ),
                                                                    },
                                                                ),
                                                            ],
                                                            flags: FStringFlags {
                                                                quote_style: Single,
                                                                prefix: Regular,
                                                                triple_quoted: true,
                                                            },
                                                        },
                                                    ),
                                                ),
                                            },
                                        },
                                    ),
                                ],
                                keywords: [],
                            },
                        },
                    ),
                    body: [
                        Pass(
                            StmtPass {
                                node_index: NodeIndex(
                                    11,
                                ),
                                range: 258..262,
                            },
                        ),
                    ],
                    elif_else_clauses: [],
                },
            ),
        ],
    },
)
```
## Errors

  |
5 | if call(f'''{x:.3f
6 | '''
  | ^^^ Syntax Error: f-string: expecting '}'
7 |     pass
  |


  |
5 | if call(f'''{x:.3f
6 | '''
  |    ^ Syntax Error: Expected ')', found newline
7 |     pass
  |
